--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,16 +8,31 @@ build_on_master: &build_on_master
     branches:
       only: master
 
+orbs:
+  aws-ecr: circleci/aws-ecr@7.0.0
 
 workflows:
   version: 2
   circleci-github:
     jobs:
-      - test_go:
+      - unit_testing_go:
           <<: *build_on_master
+      - 02-build_and_push_images_ECR:
+          <<: *build_on_master
+          account-url: ${AWS_ECR_ACCOUNT_URL}
+          aws-access-key-id:  ${AWS_ACCESS_KEY_ID}
+          aws-secret-access-key:  ${AWS_SECRET_ACCESS_KEY}
+          region: us-east-1
+          dockerfile: Dockerfile
+          path: ./
+          repo: eeeffllsiss
+          tag: latest
+
+          requires:
+            - unit_testing_go
 
 jobs:
-  test_go:
+  unit_testing_go:
     working_directory: ~/repo
     docker:
       - image: cimg/go:1.16.5
