Fix - Add orb ECR

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ workflows:
           account-url: ${AWS_ECR_ACCOUNT_URL}
           aws-access-key-id:  ${AWS_ACCESS_KEY_ID}
           aws-secret-access-key:  ${AWS_SECRET_ACCESS_KEY}
-          region: us-east-1
+          region: "us-east-1"
           dockerfile: Dockerfile
           path: ./
           repo: eeeffllsiss
