Fix - Add orb ECR

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,15 +19,6 @@ workflows:
           <<: *build_on_master
       - aws-ecr/build-and-push-image:
           <<: *build_on_master
-          account-url: ${AWS_ECR_ACCOUNT_URL}
-          aws-access-key-id:  ${AWS_ACCESS_KEY_ID}
-          aws-secret-access-key:  ${AWS_SECRET_ACCESS_KEY}
-          region: "us-east-1"
-          dockerfile: Dockerfile
-          path: ./
-          repo: eeeffllsiss
-          tag: latest
-
           requires:
             - unit_testing_go
 
@@ -51,3 +42,21 @@ jobs:
       - run:
           name: Run test
           command: make test
+  aws-ecr/build-and-push-image:
+    working_directory: ~/repo
+    executor:
+      name: docker/docker
+      tag: '3.6'
+    steps:
+
+      - checkout
+      #- docker/install-docker-compose
+      - setup_remote_docker:
+          account-url: ${AWS_ECR_ACCOUNT_URL}
+          aws-access-key-id:  ${AWS_ACCESS_KEY_ID}
+          aws-secret-access-key:  ${AWS_SECRET_ACCESS_KEY}
+          region: "us-east-1"
+          dockerfile: Dockerfile
+          path: ./
+          repo: eeeffllsiss
+          tag: latest
