Fix - Add orb ECR - repo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ workflows:
           region: AWS_REGION
           dockerfile: Dockerfile
           path: ./
-          repo: eeeffllsiss
+          repo: boletia-ecr
           tag: latest
 
           requires:
@@ -51,29 +51,3 @@ jobs:
       - run:
           name: Run test
           command: make test
-  aws-ecr/build-and-push-image:
-    working_directory: ~/repo
-    executor:
-      name: docker/docker
-      tag: '3.6'
-    steps:
-
-      - checkout
-      #- docker/install-docker-compose
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - run:
-          name: ECR - Docker Login
-          command: |
-            aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/f0z2q6f8
-            echo "${PASS_PRIVATE_REGISTRY}" | docker login ${URL_PRIVATE_REGISTRY}  --username ${USER_PRIVATE_REGISTRY} --password-stdin 
-      - run:
-          name: Build Docker image TAG
-          command: |
-            TAG="0.1.<< pipeline.number >>"
-            docker build -t $AWS_ECR_ACCOUNT_URL/boletia-ecr:$TAG .
-      - run:
-          name: Push Docker image
-          command: |
-            TAG="0.1.<< pipeline.number >>"
-            docker push $AWS_ECR_ACCOUNT_URL/boletia-ecr:$TAG
