--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ workflows:
           region: AWS_REGION
           dockerfile: Dockerfile
           path: ./
-          repo: boletia-ecr
-          tag: latest
+          repo: rest-cpu-load
+          tag: 0.1.<< pipeline.number >>
 
           requires:
             - unit_testing_go
