--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
           command: make test
   preprare_chart_and_deploy:
     docker:
-      - image: circleci/node:10.24.1
+      - image: circleci/python:3.7
     working_directory: ~/repo
     steps:
       - checkout
@@ -98,7 +98,7 @@ jobs:
              cat charts/rest-cpu-load/Chart.yaml
              helm lint charts/rest-cpu-load/
       - run:
-          name: Install awscli and gettext-base
+          name: Install awscli
           command: |
             sudo pip3 install awscli
       - run:
@@ -117,8 +117,4 @@ jobs:
           name: Prepare K8S login
           command: |
             aws eks --region $AWS_REGION update-kubeconfig --name boletia
-            rm -rf .k8s/.generated && mkdir -p .k8s/.generated
-            for f in .k8s/templates/staging.yml
-              do
-              envsubst < $f > ".k8s/.generated/$(basename $f)"
-            done
+            kubectl get pods --all-namespace
