--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,6 +116,7 @@ jobs:
       - run:
           name: Prepare K8S login
           command: |
+            aws sts get-caller-identity
             aws eks --region $AWS_REGION update-kubeconfig --name $EKS_CLUSTER_NAME
             kubectl get pods --all-namespace
 
