--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,4 +124,4 @@ jobs:
       - run:
           name: Deploying Kubernetes
           command: |
-            helm upgrade rest-cpu-load charts/rest-cpu-load/
+            helm install rest-cpu-load charts/rest-cpu-load/
