--- a/charts/rest-cpu-load/templates/service.yaml
+++ b/charts/rest-cpu-load/templates/service.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "rest-cpu-load.labels" . | nindent 4 }}
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: nlb
-    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
+#    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
 spec:
   type: {{ .Values.service.type }}
   ports:
